--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
         "build": "npm run lint:code -s && gik-npm build",
         "docs": "npm run lint:docs -s && gik-npm docs",
         "test": "npm run lint:test -s && gik-npm test",
-        "start": "nodemon -V -w $npm_package_directories_src -w $npm_package_directories_test -x 'npm run build -s && npm run test -s'",
-        "precommit": "npm run build -s && npm run test -s && npm run ver:commit -s && npm run docs -s"
+        "verify": "npm run build -s && npm run test -s",
+        "start": "nodemon -V -w $npm_package_directories_src -w $npm_package_directories_test -x 'npm run verify -s'",
+        "pub:beta": "npm run verify -s && npm run ver:beta -s && npm publish --access public --tag beta",
+        "pub:latest": "npm run verify -s && npm publish --access public --tag latest",
+        "precommit": "npm run verify -s && npm run ver:commit -s && npm run docs -s",
+        "prepublishOnly": "npm run docs -s"
     },
     "dependencies": {
         "@gik/tools-thrower": "^0.1.6"
