--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "@gik/tools-checker",
-    "version": "0.0.7",
+    "version": "0.0.8",
     "description": "A simple type validator for those who resist to TypeScript or FlowType",
     "license": "MIT",
     "homepage": "https://github.com/gikmx/tools",
     "contributors": [
-        "Héctor Menéndez <hector@gik.mx> (hectormenendez.com)"
+        "Héctor Menéndez <hector@gik.mx> (http://hectormenendez.com)"
     ],
     "keywords": [
         "type",
@@ -19,9 +19,10 @@
         "url": "https://github.com/gikmx/tools/issues"
     },
     "engines": {
-        "node": ">=6.11.3"
+        "node": ">=6.11.3",
+        "npm": ">=5.4.2"
     },
-    "main": "lib/index.js",
+    "main": "lib/checker.js",
     "directories": {
         "test": "./test",
         "src": "./src",
@@ -44,11 +45,11 @@
         "prepublishOnly": "npm run docs -s"
     },
     "dependencies": {
-        "@gik/tools-thrower": "^0.1.6"
+        "@gik/tools-thrower": "^0.1.9"
     },
     "devDependencies": {
         "@gik/eslint-config": "0.0.3",
-        "@gik/npm": "0.0.28",
+        "@gik/npm": "0.0.29",
         "nodemon": "^1.12.1"
     }
 }
