--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "@gik/tools-checker",
     "version": "0.0.9",
-    "description": "A simple type validator for those who resist to TypeScript or FlowType",
+    "description": "A minimal type-checker for JavaScript purists. Part of our [tools suite](https://github.com/gikmx/tools).",
     "license": "MIT",
-    "homepage": "https://github.com/gikmx/tools",
+    "homepage": "http://gik.mx",
     "contributors": [
         "Héctor Menéndez <hector@gik.mx>"
     ],
